Correção de erros, e deploy automatico
