# src/controllers/MontaPcController.js
@@ -11,7 +11,7 @@ async function montaPC(req, res){
       required: true,
       schema: {"requisitos" : 
         [{
-            "Armazenamento": " 100 GB available space",
+            "Armazenamento": " 100 GB available",
             "Cpu": " Intel Core i5-2500K@3.3GHz or AMD FX 6300@3.5GHz",
             "Gpu": " Nvidia GeForce GTX 780 (3 GB) or AMD Radeon R9 290 (4GB)",
             "Ram": " 8 GB RAM"
@@ -19,51 +19,44 @@ async function montaPC(req, res){
       }
     }
     */
+    let gpu, ram, armazenamento;
+    let erros = []
 
-    try{
-        let gpu = await modelPlacaVideo.recomendaPlacaVideoComBaseRequisitos(req.body.requisitos);
-        //gpu = await modelApiGoogle.retornaUmProdutoDaApiShopping(gpu.gpu);
-    
-        let ram = modelRam.encontraMaiorMemoriaDosRequisitos(req.body.requisitos);
-        //ram = await modelApiGoogle.retornaUmProdutoDaApiShopping('Memoria ram ' + ram);
-    
-        let armazenamento = modelArmazenamento.somaArmazenamentoRequisitos(req.body.requisitos);
-        //armazenamento = await modelApiGoogle.retornaUmProdutoDaApiShopping('SSD '+ armazenamento);
-    
-        let jsonRetorno = {
-            placa: {title:gpu.gpu},
-            ram: {title:ram},
-            rom: {title:armazenamento}
-        };
-        return res.status(200).json(jsonRetorno)
-        /*#swagger.responses[200] = {
-            description: 'Calculado com sucesso.',
-            schema: {
-                "placa": {
-                    "title": "GeForce GTX 1660"
-                },
-                "ram": {
-                    "title": "8GB DDR4"
-                },
-                "rom": {
-                    "title": "240GB"
-                }
-            }
-        }*/
+    try {
+        gpu = await modelPlacaVideo.recomendaPlacaVideoComBaseRequisitos(req.body.requisitos);
+    } catch (erro) {
+        gpu = null;
+        erros.push(erro)
+    }
+    try {
+        ram = modelRam.encontraMaiorMemoriaDosRequisitos(req.body.requisitos);
+    } catch (erro) {
+        ram = null;
+        erros.push(erro)
+    }
+    try {
+        armazenamento = modelArmazenamento.somaArmazenamentoRequisitos(req.body.requisitos);
+    } catch (erro) {
+        armazenamento = null;
+        erros.push(erro)
+    }
 
-    }
-    catch(e){
-        return res.status(500).json({erro:e});
-        /*#swagger.responses[500] = {
-            description: 'Erro ao calcular.',
-            schema: {
-                "erro": "Menssagem."
-            }
-        }*/
-    }
-    
-    
-    
+    let jsonRetorno = {
+        placa: gpu,
+        ram: ram,
+        rom: armazenamento,
+        erros: erros
+    };
+    return res.status(200).json(jsonRetorno)
+    /*#swagger.responses[200] = {
+        description: 'Calculado com sucesso.',
+        schema: {
+            "placa": "GeForce GTX 1660",
+            "ram": "8GB DDR4",
+            "rom": "240GB",
+            "erros": []
+        }
+    }*/
 }
 
 export default {montaPC};
